--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         </div>
         
         <button class="btn" id="celebrateBtn">Rayakan!</button>
-        <audio id="birthdayAudio" src="c:\kembar\ssstik.io_1746970102468.mp3"></audio>
+        <audio id="birthdayAudio" src="ssstik.io_1746970102468.mp3"></audio>
 
     </div>
 
